--- a/react_native/rate-repository-app/package.json
+++ b/react_native/rate-repository-app/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.5",
+    "eslint_d": "^10.1.3",
     "eslint-plugin-react-native": "^3.11.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
@@ -23,7 +24,8 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
